--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.2",
     "@types/react-animate-on-scroll": "^2.1.2",
+    "@types/react-burger-menu": "^2.8.0",
     "@types/react-dom": "^17.0.1",
     "react": "^17.0.1",
     "react-animate-on-scroll": "^2.1.5",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
